# User-Management-System-Frontend-Backend-withAPI

./: .env.example  .gitignore  README.md  SECURITY_ISSUES.md  alembic.ini  debug-build.sh  deploy.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init_tables.py  0002_add_last_login_to_users.py  0003_add_permissions.py  0004_add_user_groups.py  0005_add_resources.py  0006_add_token_blocklist.py
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  errors.py  groups.py  permissions.py  resources.py  roles.py  users.py
app/core/: exceptions.py  rate_limiter.py  request_id.py  security.py
app/crud/: __init__.py  base.py  group.py  permission.py  resource.py  role.py  user.py
app/db/: mongo.py  postgres.py
app/models/: __init__.py  audit_log.py  error_log.py  group.py  permission.py  resource.py  role.py  token_blocklist.py  user.py
app/schemas/: group.py  permission.py  resource.py  role.py  token.py  user.py
app/services/: audit_service.py  error_service.py  group_service.py  permission_service.py  resource_service.py  role_service.py  user_service.py
docker/: Dockerfile  docker-compose.yml
scripts/: export_users.py  seed.py
sql/: __init__.py  complex_queries.sql  stored_procedures.sql  views.sql
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_role_endpoints.py  test_user_endpoints.py
tests/unit/: test_audit_service.py  test_security.py  test_user_crud.py
user-management-frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
user-management-frontend/src/: App.tsx
user-management-frontend/src/api/: authApi.ts  axios.ts  baseApi.ts  errorApi.ts  groupApi.ts  index.ts  permissionApi.ts  resourceApi.ts  roleApi.ts  userApi.ts
user-management-frontend/src/components/common/: SnackbarProvider.tsx
user-management-frontend/src/context/: AuthContext.tsx
user-management-frontend/src/hooks/: usePermissions.ts
user-management-frontend/src/pages/dashboard/: DashboardPage.tsx
user-management-frontend/src/pages/errors/: ErrorLogsPage.tsx
user-management-frontend/src/routes/: AppRoutes.tsx
user-management-frontend/src/store/: authMiddleware.ts  authSlice.ts  index.ts  notificationSlice.ts
user-management-frontend/src/theme/: colors.ts  index.tsx
user-management-frontend/src/types/: api.types.ts  auth.types.ts  error.types.ts  group.types.ts  index.ts  permission.types.ts  resource.types.ts  role.types.ts  user.types.ts
user-management-frontend/src/utils/: format.ts  permissions.ts  storage.ts  validation.ts
(+41 files in other folders)
